--- a/Changes
+++ b/Changes
@@ -2,3 +2,7 @@ Revision history for Perl module DateTime::Zodiac
 
 1.00 Wed Apr 02 2008
     - original version
+1.01 Thu Apr 03 2008
+    - extended documentation
+    - optimized zodiac_astro method
+    - added missing deps in Makefile.PL
