--- a/README
+++ b/README
@@ -1,96 +1,82 @@
 NAME
-    Text::Phonetic - A module implementing various phonetic algorithm
+    DateTime::Event::Zodiac - Return zodiac for a given date
 
 SYNOPSIS
-      use Text::Phonetic;
-  
-      my $phonetic = Text::Phonetic::Metaphone->new();
-      $encoded_string = $phonetic->encode($string);
-      @encoded_list = $phonetic->encode(@list);
-  
-      my $same = $phonetic->compare($string1,$string2);
+      use DateTime::Event::Zodiac qw(zodiac_date_name zodiac_date_symbol zodiac_astro_name zodiac_astro_symbol);
+      
+  my $dt = DateTime->new( 
+           year   => 1979,
+           month  => 3,
+           day    => 27,
+      );
 
-    This module provides an easy and convinient way to encode names with
-    various phonetic algorithms. It acts as a wrapper arround other phonetic
-    algorithm modules like Text::Metaphone, Text::DoubleMetaphone,
-    Text::Soundex and also implements some other algorithms such as
-    Text::Phonetic::DaitchMokotoff, Text::Phonetic::Koeln and
-    Text::Phonetic::Phonix.
+      print zodiac_date_name($dt);
+      print zodiac_astro_symbol($dt);
 
-    The module can easily be subclassed.
+    Returns the latin zodiac name or alternatively the unicode zodiac symbol
+    for the given date. The zodiac may be calculated using either fixed
+    dates or using the longitude/position of the sun.
+
+    The module exports no symbols by default. All used functions must be
+    requested in the use statement.
+
+    All methods return undef on failiure.
 
 DESCRIPTION
-  new
-     $obj = Text::Phonetic::SUBCLASS->new({ %PARAMETERS })
- 
-    You can pass arbitrary attributes to the constructor. The only global
-    attribute is "unidecode" which defaults to 1 if not set. This attribute
-    controlls if non-latin characters should be transliterated to A-Z.
+  zodiac_date_name
+     $name = zodiac_date_name($dt);
 
-    Additional attributes may be defined by subclasses.
+    Latin zodiac name: aries, taurus, gemini, ... Fixed dates.
 
-  encode
-     $RETURN_STRING = $obj->encode($STRING);
-     OR
-     @RETURN_LIST = $obj->encode(@LIST);
-     OR
-     $RETURN_LIST_REF = $obj->encode(@LIST);
- 
-    Encodes the given string or list of strings. Returns a single value,
-    array or array reference depending on the caller context and parameters.
+  zodiac_date_symbol
+     $symbol = zodiac_date_symbol($dt);
 
-  compare
-     $RETURN_CODE = $obj->compare($STRING1,$STRING2);
- 
-    The return code is an integer between 100 and 0 indicating the
-    likelihood that the to results are the same. 100 usually means that the
-    strings are completely identical. 90 means that the strings match after
-    all non-latin characters have been transliterated. Values in between 90
-    and 0 mean that the given strings likely match. 0 means that the used
-    alogorithm couldn't match the two strings at all. "compare" is a
-    shortcut to the "$obj-&gt;_do_compare($CODE1,$CODE2)" method.
+    Unicode zodiac symbol positions U+2648 to U+2653 Fixed dates.
 
-SUBLCASSING
-    You can easily subclass Text::Phonetic and add your own phonetic
-    algorithm. All subclasses have to use Text::Phonetic as their base
-    class, and the following methods need to be implemented:
+  zodiac_astro_name
+     $name = zodiac_astro_name($dt);
 
-  _do_encode
-     $RESULT = $obj->_do_encode($STRING);
+    Latin zodiac name: aries, taurus, gemini, ... Calculated from the
+    longitude/position of the sun.
 
-    This method does the actual encoding. It should return only one element.
-    (eg. string or some kind of reference)
+  zodiac_astro_symbol
+     $symbol = zodiac_astro_symbol($dt);
 
-  _do_compare
-     $RETURN_STRING = $obj->_do_compare($RESULT1,$RESULT2);
- 
-    If your "_do_encode" method doesn't return a single string you also
-    might need to implement a comparison method. It takes two results as
-    returned by "_do_encode" and returns an integer value between 90 and 0
-    (see "compare").
+    Unicode zodiac symbol positions U+2648 to U+2653 Calculated from the
+    longitude/position of the sun.
 
-  Object structure
-    The object is a simple Hash reference containing all parameters passed
-    during construction.
+  zodiac_date
+    Simply computes the zodiac from the date and returns a hash with the
+    keys name, symbol, start and end.
 
-  Helper functions
-    _is_inlist
-       Text::Phonetic::_is_inlist($STRING,@LIST);
-       OR
-       Text::Phonetic::_is_inlist($STRING,$LIST_REF);
- 
-      Returns a true value if $STRING is in the supplied list. Otherwise
-      return false.
+    Used internally by "zodiac_date_name" and "zodiac_date_symbol"
 
-    _compare_list
-       Text::Phonetic::_compare_list($LIST1_REF,$LIST2_REF);
+  zodiac_astro
+    Computes the zodiac from the position of the sun and returns a hash with
+    the keys name, symbol, start and end. The keys start and end should be
+    ignored since they are used for the "zodiac_date" function.
 
-      Compares the two arrays and returns true if at least one element is
-      equal (ignoring the position) in both lists.
+    May differ from the results of "zodiac_date" depending on the solar year
+    (leap year ect).
+
+    See DateTime::Util::Astro::Sun for notes on accuracy. If computed
+    accurately enough this module should be also able to get the correct
+    zodiac for the exact time of birth.
+
+    Used internally by "zodiac_astro_name" and "zodiac_astro_symbol"
+
+DISCLAIMER
+    The author of this module regads astrology as being a pseudoscience and
+    superstition. I wrote this module for my job. I was young, foolish and I
+    needed the money.
+
+TODO
+    The "zodiac_astro_horoscope" and "zodiac_date_horoscope" functions have
+    not yet been implemented ;-)
 
 SUPPORT
     Please report any bugs or feature requests to
-    "text-phonetic@rt.cpan.org", or through the web interface at
+    "datetime-event-zodiac@rt.cpan.org", or through the web interface at
     <http://rt.cpan.org>. I will be notified, and then you'll automatically
     be notified of progress on your bug as I make changes.
 
@@ -98,11 +84,11 @@ AUTHOR
         Maroš Kollár
         CPAN ID: MAROS
         maros [at] k-1.com
-        http://www.k-1.com
+        L<http://www.k-1.com>
 
 COPYRIGHT
-    Text::Phonetic is Copyright (c) 2006,2007 Maroš. Kollár. All rights
-    reserved.
+    DateTime::Event::Zodiac is Copyright (c) 2006,2007 Maroš. Kollár. All
+    rights reserved.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
