--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl module DateTime::Zodiac
+Revision history fon Perl module DateTime::Zodiac
 
 1.00 Wed Apr 02 2008
     - original version
@@ -6,3 +6,6 @@ Revision history for Perl module DateTime::Zodiac
     - extended documentation
     - optimized zodiac_astro method
     - added missing deps in Makefile.PL
+1.02 Thu Feb 23 2012
+    - Switched to Module::Install
+    - symbol now '\x{2648}' instead of utf8 encoded character
